# bazel-gazelle

./: BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  def.bzl  extend.md  go.mod  go.sum  how-gazelle-works.md  reference.md
cmd/autogazelle/: BUILD.bazel  README.md
cmd/fetch_repo/: BUILD.bazel
cmd/gazelle/: BUILD.bazel  diff_test.go  fix_test.go  integration_test.go  main.go  update-repos.go
cmd/generate_repo_config/: BUILD.bazel  main.go  main_test.go
cmd/move_labels/: BUILD.bazel  main.go  main_test.go
config/: BUILD.bazel  config.go  config_test.go
docs/: README.md
flag/: BUILD.bazel
internal/: gazelle_binary.bzl  go_repository_test.go  go_repository_tools.bzl  go_repository_tools_srcs.bzl
internal/bzlmod/: go_deps.bzl
internal/gazellebinarytest/: BUILD.bazel  gazellebinary_test.go  xlang.go
internal/generationtest/: generation_test.go  generationtest.bzl
internal/language/test_filegroup/: BUILD.bazel  lang.go
internal/language/test_load_for_packed_rules/: BUILD.bazel  lang.go
internal/language/test_loads_from_flag/: BUILD.bazel  lang.go
internal/module/: BUILD.bazel  module.go
internal/version/: BUILD.bazel
internal/wspace/: BUILD.bazel
label/: BUILD.bazel  label.go
language/: BUILD.bazel  base.go  lang.go  update.go
language/bazel/visibility/: BUILD.bazel  config.go  lang.go  lang_test.go  resolve.go
language/go/: BUILD.bazel  config.go  config_test.go  fileinfo.go  fix.go  fix_test.go  generate.go  generate_test.go  kinds.go  lang.go  modules.go  package.go  reference.md  resolve.go  resolve_test.go  stubs_test.go  update.go  update_import_test.go  work.go
language/go/gen_std_package_list/: BUILD.bazel
language/go/platform_info_generator/: BUILD.bazel  main.go
language/go/testdata/tests_per_file/: BUILD.want  foo_test.go
language/go/testdata/tests_per_file_from_default/: BUILD.want  foo_test.go
language/go/testdata/tests_per_file_new_file/: BUILD.want  foo_test.go
language/proto/: BUILD.bazel  config_test.go  fix_test.go  generate.go  generate_test.go  kinds.go  known_go_imports.go  lang.go  resolve.go  resolve_test.go
merger/: BUILD.bazel  fix.go  fix_test.go  merger.go  merger_test.go
pathtools/: BUILD.bazel
repo/: BUILD.bazel  remote.go  remote_test.go  repo.go  repo_test.go  stubs_test.go
resolve/: BUILD.bazel  README.md  cache.go  cache_bench_test.go  cache_test.go  config.go  index.go  index_cache.go  index_cache_test.go  resolve_test.go
rule/: BUILD.bazel  expr.go  merge_test.go  value_test.go
tests/: BUILD.bazel
tests/bcr/go_mod/: go.mod
tests/bcr/go_mod/pkg/: BUILD.bazel  pkg_test.go
tests/bcr/go_mod/pkg/data/: BUILD.bazel
tests/bcr/go_mod/proto/: BUILD.bazel  foo_test.go
tests/bcr/go_mod/tools/: go.mod
tests/bcr/go_work/: go.mod
tests/bcr/go_work/pkg/: BUILD.bazel  go.mod  pkg_test.go
tests/bcr/go_work/pkg/data/: BUILD.bazel
tests/bcr/go_work/proto/: BUILD.bazel  foo.proto  foo_test.go  go.mod
tests/bcr/go_work/test_dep/: go.mod
tests/bcr/go_work/tools/: go.mod
tests/bzlmod/: go_mod_test.bzl
tests/fix_package_proto_name_match/example/: BUILD.out  example.proto  other.proto
tests/go_fix_workspace_without_gazelle/: expectedStderr.txt
tests/vfsgazelle_basic_snapshot/: BUILD.out  MODULE.bazel  arguments.txt  go.mod  hello_test.go
testtools/: BUILD.bazel  config.go  files.go
tools/override-generator/: BUILD.bazel  main.go
tools/releaser/: BUILD.bazel  main.go
v2/: BUILD.bazel  go.mod  go.sum
v2/cmd/gazelle/: BUILD.bazel  langs.go  main.go
v2/cmd/gazelle/update/: BUILD.bazel  diff.go  fix.go  metaresolver.go  print.go  update.go
v2/internal/wspace/: BUILD.bazel
v3/: BUILD.bazel  def.bzl
v3/cmd/: BUILD.bazel
v3/cmd/gazelle/: BUILD.bazel  langs.go  main.go  main_test.go
v3/internal/: BUILD.bazel
v3/internal/vfs/: BUILD.bazel  cache.go  cache_test.go  repo.go  repo_test.go  state.go
v3/language/: BUILD.bazel  base.go  base_test.go  lang.go  registry.go
v3/language/go/: BUILD.bazel  build_constraints.go  config.go  embed.go  fileinfo.go  fix.go  generate.go  go.go  go_test.go  kinds.go  lang.go  package.go  resolve.go  std_package_list.go  stdlib_links.go  utils.go  vfs.go
v3/language/proto/: BUILD.bazel  fix.go  generate.go  kinds.go  known_imports.go  proto.go  proto_test.go  resolve.go
v3/run/: BUILD.bazel  run.go  run_test.go
v3/walk/: BUILD.bazel  config.go  walk.go  walk_test.go
vfsgazelle/: BUILD.bazel  def.bzl
vfsgazelle/cmd/: BUILD.bazel
vfsgazelle/cmd/gazelle/: BUILD.bazel  langs.go  main.go  main_test.go
vfsgazelle/internal/: BUILD.bazel
vfsgazelle/internal/vfs/: BUILD.bazel  cache.go  doc.go  repo.go  repo_test.go  state.go
vfsgazelle/language/: BUILD.bazel  base.go  base_test.go  doc.go  lang.go  registry.go
vfsgazelle/language/go/: BUILD.bazel  build_constraints.go  config.go  embed.go  fileinfo.go  fix.go  generate.go  go_test.go  kinds.go  lang.go  package.go  resolve.go  vfs.go
vfsgazelle/language/proto/: BUILD.bazel  config.go  generate.go  kinds.go  known_proto_imports.go  proto.go  proto_test.go  resolve.go
vfsgazelle/run/: BUILD.bazel  doc.go  run.go  run_test.go
vfsgazelle/walk/: BUILD.bazel  config.go  doc.go  walk.go  walk_test.go
walk/: BUILD.bazel  cache.go  config.go  config_test.go  dirinfo.go  walk.go  walk_test.go
