load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "def",
    srcs = ["def.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@io_bazel_rules_go//go:def"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "def.bzl",
        "//v3/cmd:all_files",
        "//v3/internal:all_files",
        "//v3/language:all_files",
        "//v3/run:all_files",
        "//v3/walk:all_files",
    ],
    visibility = ["//visibility:public"],
)
