load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "def",
    srcs = ["def.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@io_bazel_rules_go//go:def"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "def.bzl",
        "//vfsgazelle/cmd:all_files",
        "//vfsgazelle/internal:all_files",
        "//vfsgazelle/language:all_files",
        "//vfsgazelle/run:all_files",
        "//vfsgazelle/walk:all_files",
    ],
    visibility = ["//visibility:public"],
)
