load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "language",
    srcs = [
        "base.go",
        "lang.go",
        "registry.go",
    ],
    importpath = "github.com/bazelbuild/bazel-gazelle/v3/language",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//label",
        "//repo",
        "//resolve",
        "//rule",
        "//v3/internal/vfs",
    ],
)

go_test(
    name = "language_test",
    size = "small",
    srcs = ["base_test.go"],
    embed = [":language"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "base.go",
        "base_test.go",
        "lang.go",
        "registry.go",
    ],
    visibility = ["//visibility:public"],
)
