load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "run",
    srcs = ["run.go"],
    importpath = "github.com/bazelbuild/bazel-gazelle/v3/run",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//label",
        "//merger",
        "//repo",
        "//resolve",
        "//rule",
        "//v3/internal/vfs",
        "//v3/language",
        "//v3/walk",
    ],
)

go_test(
    name = "run_test",
    size = "small",
    srcs = ["run_test.go"],
    embed = [":run"],
    deps = [
        "//config",
        "//resolve",
        "//rule",
        "//v3/internal/vfs",
        "//v3/language",
        "//v3/language/go",
    ],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "run.go",
        "run_test.go",
    ],
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":run",
    visibility = ["//visibility:public"],
)
