load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "walk",
    srcs = ["walk.go"],
    importpath = "github.com/bazelbuild/bazel-gazelle/v3/walk",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//rule",
        "//v3/internal/vfs",
    ],
)

go_test(
    name = "walk_test",
    size = "small",
    srcs = ["walk_test.go"],
    embed = [":walk"],
    deps = ["//config"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "walk.go",
        "walk_test.go",
    ],
    visibility = ["//visibility:public"],
)
