load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "walk",
    srcs = [
        "config.go",
        "walk.go",
    ],
    importpath = "github.com/bazelbuild/bazel-gazelle/v3/walk",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//flag",
        "//rule",
        "//v3/internal/vfs",
        "//v3/language",
        "@com_github_bmatcuk_doublestar_v4//:doublestar",
        "@com_github_bazelbuild_buildtools//build",
    ],
)

go_test(
    name = "walk_test",
    size = "small",
    srcs = ["walk_test.go"],
    embed = [":walk"],
    deps = [
        "//config",
        "//rule",
    ],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "config.go",
        "walk.go",
        "walk_test.go",
    ],
    visibility = ["//visibility:public"],
)
