load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "walk",
    srcs = [
        "config.go",
        "walk.go",
    ],
    importpath = "github.com/uhvesta/bazel-gazelle/v3/walk",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//flag",
        "//rule",
        "//v3/internal/vfs",
        "//v3/language",
        "@com_github_bazelbuild_buildtools//build",
        "@com_github_bmatcuk_doublestar_v4//:doublestar",
    ],
)

go_test(
    name = "walk_test",
    size = "small",
    srcs = ["walk_test.go"],
    embed = [":walk"],
    deps = [
        "//config",
        "//rule",
        "//v3/internal/vfs",
    ],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "config.go",
        "walk.go",
        "walk_test.go",
    ],
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":walk",
    visibility = ["//visibility:public"],
)
