load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("//v3:def.bzl", "DEFAULT_LANGUAGES", "gazelle_v3_binary")

gazelle_v3_binary(
    name = "gazelle",
    languages = DEFAULT_LANGUAGES,
    visibility = ["//visibility:public"],
)

go_library(
    name = "gazelle_lib",
    # keep
    srcs = ["main.go"],
    importpath = "github.com/uhvesta/bazel-gazelle/v3/cmd/gazelle",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//resolve",
        "//rule",
        "//v3/internal/vfs",
        "//v3/language",
        "//v3/language/go",
        "//v3/language/proto",
        "//v3/run",
        "//v3/walk",
    ],
)

go_test(
    name = "gazelle_test",
    srcs = [
        "langs.go",
        "main_test.go",
    ],
    embed = [":gazelle_lib"],
    deps = [
        "//v3/internal/vfs",
    ],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "langs.go",
        "main.go",
        "main_test.go",
    ],
    visibility = ["//visibility:public"],
)
