load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "vfs",
    srcs = ["cache.go"],
    importpath = "github.com/bazelbuild/bazel-gazelle/v3/internal/vfs",
    visibility = ["//visibility:public"],
)

go_test(
    name = "vfs_test",
    size = "small",
    srcs = ["cache_test.go"],
    embed = [":vfs"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "cache.go",
        "cache_test.go",
    ],
    visibility = ["//visibility:public"],
)
