load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go",
    srcs = ["go.go"],
    importpath = "github.com/bazelbuild/bazel-gazelle/v3/language/go",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//label",
        "//language",
        "//language/go",
        "//repo",
        "//resolve",
        "//rule",
        "//v3/internal/vfs",
        "//v3/language",
    ],
)

go_test(
    name = "go_test",
    size = "small",
    srcs = ["go_test.go"],
    embed = [":go"],
    deps = ["//v3/internal/vfs"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "go.go",
        "go_test.go",
    ],
    visibility = ["//visibility:public"],
)
