load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go",
    srcs = [
        "build_constraints.go",
        "config.go",
        "constants.go",
        "embed.go",
        "fileinfo.go",
        "fix.go",
        "generate.go",
        "kinds.go",
        "lang.go",
        "package.go",
        "platform_info.go",
        "resolve.go",
        "std_package_list.go",
        "stdlib_links.go",
        "utils.go",
        "vfs.go",
    ],
    importpath = "github.com/bazelbuild/bazel-gazelle/v3/language/go",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//flag",
        "//internal/module",
        "//internal/version",
        "//label",
        "//pathtools",
        "//repo",
        "//resolve",
        "//rule",
        "//v3/internal/vfs",
        "//v3/language",
        "//v3/language/proto",
        "@com_github_bazelbuild_buildtools//build",
        "@org_golang_x_mod//modfile",
        "@org_golang_x_mod//module",
    ],
)

go_test(
    name = "go_test",
    size = "small",
    srcs = ["go_test.go"],
    embed = [":go"],
    deps = ["//v3/internal/vfs"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "build_constraints.go",
        "config.go",
        "constants.go",
        "embed.go",
        "fileinfo.go",
        "fix.go",
        "generate.go",
        "go_test.go",
        "kinds.go",
        "lang.go",
        "package.go",
        "platform_info.go",
        "resolve.go",
        "std_package_list.go",
        "stdlib_links.go",
        "utils.go",
        "vfs.go",
    ],
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":go",
    visibility = ["//visibility:public"],
)
