load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("//vfsgazelle:def.bzl", "DEFAULT_LANGUAGES", "vfsgazelle_binary")

vfsgazelle_binary(
    name = "gazelle",
    languages = DEFAULT_LANGUAGES,
    visibility = ["//visibility:public"],
)

go_library(
    name = "gazelle_lib",
    # keep
    srcs = ["main.go"],
    importpath = "github.com/uhvesta/bazel-gazelle/vfsgazelle/cmd/gazelle",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//resolve",
        "//rule",
        "//vfsgazelle/internal/vfs",
        "//vfsgazelle/language",
        "//vfsgazelle/language/go",
        "//vfsgazelle/language/proto",
        "//vfsgazelle/run",
        "//vfsgazelle/walk",
        "@com_github_klauspost_compress//zstd",
    ],
)

go_test(
    name = "gazelle_test",
    srcs = ["main_test.go"],
    embed = [":gazelle_lib"],
    deps = [
        "//config",
        "//vfsgazelle/internal/vfs",
        "//vfsgazelle/language",
        "//vfsgazelle/language/go",
        "//vfsgazelle/language/proto",
    ],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "langs.go",
        "main.go",
        "main_test.go",
    ],
    visibility = ["//visibility:public"],
)
