load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "vfs",
    srcs = [
        "cache.go",
        "doc.go",
        "repo.go",
        "state.go",
    ],
    importpath = "github.com/uhvesta/bazel-gazelle/vfsgazelle/internal/vfs",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//rule",
        "@com_github_bazelbuild_buildtools//build",
        "@com_github_bmatcuk_doublestar_v4//:doublestar",
    ],
)

go_test(
    name = "vfs_test",
    size = "small",
    srcs = [
        "cache_test.go",
        "repo_test.go",
    ],
    embed = [":vfs"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "cache.go",
        "cache_test.go",
        "repo.go",
        "repo_test.go",
        "state.go",
    ],
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":vfs",
    visibility = ["//vfsgazelle:__subpackages__"],
)
